--- a/bin/view/template.html
+++ b/bin/view/template.html
@@ -8,7 +8,8 @@ Content-type: text/html
 </head>
 <body>
     <header>
-        <span>$created_time$</span>
+        <p>$created_time$</p>
+        <p>$nav$</p>
     </header>
        $body$
     <footer>
