--- a/bin/view/default.css
+++ b/bin/view/default.css
@@ -1,7 +1,7 @@
 * { margin:0; padding:0; }
 body { max-width:1000px; }
 article, nav, header, footer, aside { display:block; float:left; }
-footer { width:100%; clear:both; font-size:70% }
+footer { width:100%; clear:both; font-size:70%; }
 ul { margin-left:30px; }
 a { color:red; text-decoration:none;}
 nav li { display:block; float:left; }
