--- a/bin/view/template.html
+++ b/bin/view/template.html
@@ -6,6 +6,7 @@ Content-type: text/html
   <meta charset="utf-8" />
   <title>$title$</title>
   <link rel="stylesheet" href="/view/default.css" />
+  <script src="/view/counter.js"></script>
   <meta name="viewport" content="width=device-width" />
 </head>
 <body>
@@ -24,7 +25,7 @@ Content-type: text/html
     <article id="article">
       <header id="article-header">
       <nav>
-	$nav$<br />created: $created_time$<br />views: $views$
+        $nav$<br />created: $created_time$<br />views: <span id="views">$views$</span>
       </nav>
       </header>
       <article id="article-body">
