キーワード検索機能の追加

--- a/bin/view/template.html
+++ b/bin/view/template.html
@@ -34,7 +34,7 @@ Content-type: text/html
       </article>
       <footer id="article-footer">
         <nav>
-	  created: $created_time$&nbsp;(last modified: $modified_time$)<br />views:&nbsp;keywords: $Keywords$
+          created: $created_time$&nbsp;(last modified: $modified_time$)<br />views:&nbsp;keywords: <span id="keywords">$Keywords$</span>
         </nav>
       </footer>
     </article>
