Add full search

--- a/bin/view/template.html
+++ b/bin/view/template.html
@@ -39,6 +39,7 @@ Content-type: text/html
       </footer>
     </article>
     <aside id="widgets">
+      <aside id="full-search"></aside>
       <aside id="last-articles"></aside>
       <footer id="page-footer">
 	<p>Copyright: $Copyright$</p>
