--- a/bin/view/template.html
+++ b/bin/view/template.html
@@ -41,6 +41,7 @@ Content-type: text/html
     <aside id="widgets">
       <aside id="full-search"></aside>
       <aside id="last-articles"></aside>
+      <aside id="rank-articles"></aside>
       <footer id="page-footer">
 	<p>Copyright: $Copyright$</p>
       </footer>
