--- a/bin/bsview/jumbotron.css
+++ b/bin/bsview/jumbotron.css
@@ -3,6 +3,9 @@ body {
   padding-top: 3.5rem;
 }
 
+h2 {padding-top:20px}
+h3 {padding-top:20px}
+
 #article-info p{font-size:80%}
 #widgets h1{font-size:160%}
 #widgets a{font-size:80%}
