--- a/bin/bsview/jumbotron.css
+++ b/bin/bsview/jumbotron.css
@@ -3,7 +3,10 @@ body {
   padding-top: 3.5rem;
 }
 
-h2 {padding-top:20px}
+h2 {margin-top:20px}
+h2:before {content:"["}
+h2:after {content:"]"}
+
 h3 {padding-top:20px}
 
 #article-info p{font-size:80%}
