--- a/bin/bsview/jumbotron.css
+++ b/bin/bsview/jumbotron.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 70px;
+}
+
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
   padding-top: 3.5rem;
